--- a/modules/editor/components/poll_maker/tpl/popup.html
+++ b/modules/editor/components/poll_maker/tpl/popup.html
@@ -31,7 +31,7 @@ $(function(){
 		, onSelect:function(){
 			$(this).prev('input[type="hidden"]').val(this.value.replace(/-/g,""));
 		}
-		,minDate: new Date("{date('Y-m-d',time())}")
+		,minDate: new Date("{zdate(date('YmdHis'), 'Y-m-d')}")
 	};
 	$.extend(option,$.datepicker.regional['{$lang_type}']);
 	$(".inputDate").datepicker(option);
