--- a/layouts/LIFO_LAYOUT_EDITION/layout.html
+++ b/layouts/LIFO_LAYOUT_EDITION/layout.html
@@ -76,7 +76,7 @@
   <div class="page_wrap" >
     <!--#include("html/banner.html")-->
     <main class="container clearfix" id="container" role="main">
-      <div class="area p-2 mb-2">
+      <div class="area p-2 mb-2" cond="$module_info->browser_title">
         <h1 class="font-weight-bold m-0">{$module_info->browser_title}</h1>
       </div>
       {$content}
