--- a/modules/wiki/skins/LIFO_wiki/css/wiki.css
+++ b/modules/wiki/skins/LIFO_wiki/css/wiki.css
@@ -3,7 +3,7 @@
 .wiki .iText,
 .wiki textarea,
 .wiki select{border:1px solid}
-.wiki label{cursor:pointer}
+
 .wiki img{border:0}
 .wiki .document_popup_menu,
 .wiki .comment_popup_menu{text-align:right;font-size:11px}
@@ -17,7 +17,7 @@
 .wiki select{background:#fff;color:#333;border-top-color:#a6a6a6;border-left-color:#a6a6a6;border-right-color:#d8d8d8;border-bottom-color:#d8d8d8}
 .wiki .document_popup_menu a,
 .wiki .comment_popup_menu a{color:#8b8b8b}
-.wiki .wkNav{border-color:#bababa}
+
 /* Wiki Header */
 .wkHeader *{margin:0 0 20px 0;padding:0}
 .wkHeader a{text-decoration:none}
@@ -105,11 +105,7 @@
 .wkList td.summary .thumb{border-color:#ddd;background:#fff}
 .wkList td .by{color:#ccc}
 /* Wiki Navigation */
-.wiki .wkNav{margin:1em 0;text-align:center;*zoom:1;_zoom:0}
-.wiki .wkNav:after{content:"";display:block;float:none;clear:both}
-.wiki .wkNav .pagination{padding:5px 0}
-.wiki .wkNav .buttonLeft{float:left;text-align:left}
-.wiki .wkNav .buttonRight{float:right;text-align:right}
+
 /* Search Form */
 .wkSearch{position:relative;float:right;margin:0;padding:0;line-height:normal}
 .wkSearch.wkSearchFooter{clear:both;float:none;margin:1em 0;text-align:center}
@@ -120,11 +116,8 @@
 .wkSearch select{font-size:12px;height:23px;border:1px solid}
 .wkSearch .iText{width:140px;height:16px;padding:4px;font-size:12px;*margin:-1px 0;vertical-align:middle}
 /* Wiki Read */
-.wkReadHeader .titleArea .sum{float:right;white-space:nowrap;margin-top:2px}
-.wkReadHeader .titleArea .sum .read,
-.wkReadHeader .titleArea .sum .vote{font-size:11px;margin-right:5px}
-.wkReadHeader .titleArea .sum .num{font-size:9px}
-.wkReadHeader .titleArea .sum .date{padding-left:10px;font-size:9px;background-repeat:no-repeat;background-position:left center}
+
+
 .wkReadHeader .authorArea{*zoom:1;padding:10px 0}
 .wkReadHeader .authorArea:after{content:"";display:block;clear:both}
 .wkReadHeader .authorArea .author{float:left;margin-right:10px;color:#767676;text-decoration:none}
@@ -138,8 +131,7 @@
 .wkReadBody{overflow:hidden;*zoom:1}
 .wkReadBody .xe_content{overflow:hidden}
 .wkReadBody .xe_content a{text-decoration:underline}
-.wkReadFooter{border:1px solid #ccc;border-left:0;border-right:0;margin:0 0 1em 0}
-.wkReadFooter .wkNav{*zoom:1}
+
 .wkReadFooter .wkNav:after{content:"";display:block;clear:both}
 .wkReadFooter .wkNav .wikiPrev{float:left}
 .wkReadFooter .wkNav .wikiNext{float:right}
@@ -159,21 +151,15 @@
 .wkReadFooter .tbURL a:focus{text-decoration:underline}
 .wkReadFooter .tbURL dt{color:#4d4d4d}
 .wkReadFooter .tbURL dd a{color:#767676}
-.wkReadFooter .contributors{margin:1em 0}
+
 .wkReadFooter .contributors *{display:inline;margin:0;padding:0}
-.wkReadFooter .contributors dt{margin-right:5px;font-size:12px}
-.wkReadFooter .contributors dd{font-size:12px;text-decoration:none}
-.wkReadFooter .contributors a{text-decoration:none}
-.wkReadFooter .contributors a:hover,
-.wkReadFooter .contributors a:active,
-.wkReadFooter .contributors a:focus{text-decoration:underline}
-.wkReadFooter .contributors dt{color:#4d4d4d}
-.wkReadFooter .contributors dd a{color:#4d4d4d;margin-right:5px}
+
+
 .wkReadFooter .memberSignature{border-color:#f0f0f0;background-color:#fdfdfd}
 .wkReadFooter .memberSignature img.profile{border-color:#eee} 
 .wikiRead .command{float:right}
 /* Feedback List */
-.fbList{overflow:hidden;margin-bottom:10px}
+
 .fbList .fbHeader{font-size:16px}
 .fbList .fbHeader em{font-style:normal}
 .fbList .tbURL{position:relative;top:1.5em;float:left;font-size:9px}
@@ -195,8 +181,7 @@
 .fbList .item .iContent{position:relative;padding:1em 0 1em 120px;*zoom:1;z-index:1}
 .fbList .item .iContent:after{content:"";display:block;clear:both}
 .fbList .item .iContent *{margin-top:0}
-.fbList .item .iContent .xe_content{width:auto !important;clear:none}
-.fbList .item .iContent .xe_content a{text-decoration:underline}
+
 .fbList .item .iContent .option{position:relative;margin:1em 0;padding:0;list-style:none;white-space:nowrap;overflow:hidden;*zoom:1;float:right}
 .fbList .item .iContent .option li{position:relative;left:-1px;display:inline;padding:0 0 0 5px;background-repeat:no-repeat;background-position:left center;font-size:11px}
 .fbList .item .iContent .option li.wouldYou{background:none}
@@ -229,7 +214,26 @@
 .fbList .fbHeader em{color:#ff6600}
 .fbList .tbURL a{color:#767676}
 .fbList .item{border-color:#ddd}
-.fbList .item.itemReply .indent{background-image:url(../img/iconReply.gif)}
+.feedback .indent {
+    background:url(../img/iconReply.gif) no-repeat;
+}
+.feedback .indent1 {
+	padding-left: 20px;
+	background-position: 6px 15px;
+}
+.feedback .indent2 {
+	padding-left: 40px;
+	background-position: 26px 15px;
+}
+.feedback .indent3 {
+	padding-left: 60px;
+	background-position: 46px 15px;
+}
+.feedback .indent4 {
+	padding-left: 80px;
+	background-position: 66px 15px;
+}
+
 .fbList .item .author{color:#8b8b8b}
 .fbList .item .author a{color:#262626}
 .fbList .item .iContent .option li a{color:#666}
@@ -258,15 +262,7 @@
 .attachedFile dt a{color:#4d4d4d}
 .attachedFile ul.files a .bubble{border:1px solid #ddd;background-color:#fff;color:#4d4d4d}
 /* Wiki Write */
-.wkWrite li{list-style:none}
-.wkWrite fieldset{border:0}
-.wkWrite legend{position:absolute;width:0;height:0;overflow:hidden;font:0/0 Sans-serif;visibility:hidden}
-.wkWrite select{font-size:12px;vertical-align:top;height:23px}
-.wkWrite .iText{padding:3px 4px;height:15px;*margin-top:-1px}
-.wkWrite .title{margin:0 18px 10px 0;position:relative}
-.wkWrite .title .iText{font-size:18px;padding:5px 8px;width:100%;font-weight:bold}
-.wkWrite .alias{margin:0 0 10px 0}
-.wkWrite .alias .iText{width:360px}
+
 /* Editor */
 /* Editor Option */
 .wiki .editOption{margin:1em 0;text-align:left}
@@ -297,8 +293,6 @@
 .treeList{position:relative}
 #tree .treeUI,
 .treeList .treeUI{position:absolute;right:0;top:0}
-.visitLog{padding-top:5px;padding-bottom:5px;border-bottom:1px solid #ccc;text-align:right}
-.visitLog a{color:#767676;text-decoration:none}
 .wiki a.exists{text-decoration:underline;color:green}
 .wiki a.notexist{text-decoration:none;border-bottom:1px dotted #EE0000;color:#EE0000}
 .diff, 
@@ -326,20 +320,6 @@
 .wiki div.xe_content h6{border-bottom:none;font-weight:bold}
 span.edit_link{ float:right;font-size:12px;font-weight:normal;line-height:1.5em}
 /* Button */
-.wiki .btn{text-decoration:none !important;display:inline-block;*display:inline;*zoom:1;padding:0 12px;margin:0;font-family:inherit;font-size:12px;line-height:24px;height:24px;color:#333333;text-align:center;text-shadow:0 1px 1px rgba(255, 255, 255, 0.75);vertical-align:top;cursor:pointer;overflow:visible;background-color:#f5f5f5;*background-color:#e6e6e6;background-image:-moz-linear-gradient(top, #ffffff, #e6e6e6);background-image:-webkit-linear-gradient(top, #ffffff, #e6e6e6);background-image:-o-linear-gradient(top, #ffffff, #e6e6e6);background-image:linear-gradient(top, #ffffff, #e6e6e6);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);border:1px solid #bbbbbb;border-color:#e6e6e6 #e6e6e6 #bfbfbf;border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);border-bottom-color:#a2a2a2;border-radius:2px;box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)}
-.wiki .btn:hover,
-.wiki .btn:active,
-.wiki .btn[disabled]{color:#333333;background-color:#e6e6e6;*background-color:#d9d9d9}
-.wiki .btn-group{position:relative;display:inline-block;*display:inline;*margin-left:.3em;font-size:0;white-space:nowrap;vertical-align:middle;*zoom:1}
-.wiki .btn-group:first-child{*margin-left:0}
-.wiki .btn-group+.btn-group{margin-left:5px}
-.wiki .btn-group>.btn{position:relative;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0}
-.wiki .btn-group>.btn+.btn{margin-left:-1px}
-.wiki .btn-group>.btn:first-child{margin-left:0;-webkit-border-bottom-left-radius:4px;border-bottom-left-radius:4px;-webkit-border-top-left-radius:4px;border-top-left-radius:4px;-moz-border-radius-bottomleft:4px;-moz-border-radius-topleft:4px}
-.wiki .btn-group>.btn:last-child{-webkit-border-top-right-radius:4px;border-top-right-radius:4px;-webkit-border-bottom-right-radius:4px;border-bottom-right-radius:4px;-moz-border-radius-topright:4px;-moz-border-radius-bottomright:4px}
-.wiki .btn-group>.btn:hover,
-.wiki .btn-group>.btn:focus,
-.wiki .btn-group>.btn:active{z-index:2}
 
 /* Button */
 .board .btn{text-decoration:none !important;display:inline-block;*display:inline;*zoom:1;padding:0 12px;margin:0;font-family:inherit;font-size:12px;line-height:24px;height:24px;color:#333333;text-align:center;text-shadow:0 1px 1px rgba(255, 255, 255, 0.75);vertical-align:top;cursor:pointer;overflow:visible;background-color:#f5f5f5;*background-color:#e6e6e6;background-image:-moz-linear-gradient(top, #ffffff, #e6e6e6);background-image:-webkit-linear-gradient(top, #ffffff, #e6e6e6);background-image:-o-linear-gradient(top, #ffffff, #e6e6e6);background-image:linear-gradient(top, #ffffff, #e6e6e6);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);border:1px solid #bbbbbb;border-color:#e6e6e6 #e6e6e6 #bfbfbf;border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);border-bottom-color:#a2a2a2;border-radius:2px;box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)}
