--- a/modules/wiki/skins/LIFO_wiki/css/wiki.css
+++ b/modules/wiki/skins/LIFO_wiki/css/wiki.css
@@ -8,6 +8,9 @@
 	background-color: #f2f2f2;
 }
 
+p { 
+    margin: 0px;
+}
 
 /* Wiki Reset */
 
@@ -85,11 +88,6 @@
 .fbList .item .indent{position:relative;*zoom:1}
 .fbList .item .indent:after{content:"";display:block;clear:both}
 .fbList .item.itemReply .indent{padding-left:15px;background-repeat:no-repeat;background-position:0 1.2em}
-.fbList .item .author{margin:0 0 5px 0}
-.fbList .item .author a{font-size:12px;text-decoration:none}
-.fbList .item .author a:hover,
-.fbList .item .author a:active,
-.fbList .item .author a:focus{text-decoration:underline}
 .fbList .item .iContent{position:relative;padding:1em 0 1em 120px;*zoom:1;z-index:1}
 .fbList .item .iContent:after{content:"";display:block;clear:both}
 .fbList .item .iContent *{margin-top:0}
