--- a/modules/wiki/skins/LIFO_wiki/css/wiki.css
+++ b/modules/wiki/skins/LIFO_wiki/css/wiki.css
@@ -12,6 +12,15 @@ p {
     margin: 0px;
 }
 
+.wkList a {
+	color: black;
+}
+
+.Box-title {
+	font-size: 14px;
+    font-weight: 600;
+}
+
 /* Wiki Reset */
 
 .wiki img{border:0}
@@ -210,9 +219,3 @@ p {
 #wikiToc ul{padding:0 20px}
 span.edit_link{ float:right;font-size:12px;font-weight:normal;line-height:1.5em}
 /* Button */
-
-/* Button */
-.board .btn{text-decoration:none !important;display:inline-block;*display:inline;*zoom:1;padding:0 12px;margin:0;font-family:inherit;font-size:12px;line-height:24px;height:24px;color:#333333;text-align:center;text-shadow:0 1px 1px rgba(255, 255, 255, 0.75);vertical-align:top;cursor:pointer;overflow:visible;background-color:#f5f5f5;*background-color:#e6e6e6;background-image:-moz-linear-gradient(top, #ffffff, #e6e6e6);background-image:-webkit-linear-gradient(top, #ffffff, #e6e6e6);background-image:-o-linear-gradient(top, #ffffff, #e6e6e6);background-image:linear-gradient(top, #ffffff, #e6e6e6);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);border:1px solid #bbbbbb;border-color:#e6e6e6 #e6e6e6 #bfbfbf;border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);border-bottom-color:#a2a2a2;border-radius:2px;box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)}
-.board .btn:hover,
-.board .btn:active,
-.board .btn[disabled]{color:#333333;background-color:#e6e6e6;*background-color:#d9d9d9}
