--- a/modules/wiki/skins/LIFO_wiki/css/wiki.css
+++ b/modules/wiki/skins/LIFO_wiki/css/wiki.css
@@ -1,8 +1,3 @@
-
-
-
-
-
 @charset "utf-8";
 .wiki {
 	background-color: #f2f2f2;
@@ -19,6 +14,12 @@ p {
 .Box-title {
 	font-size: 14px;
     font-weight: 600;
+}
+
+.table td.fit,
+.table th.fit {
+    white-space: nowrap;
+    width: 1px;
 }
 
 /* Wiki Reset */
