Add fileupload style

--- a/modules/editor/skins/TOAST UI Editor/css/tui-file-uploader.css
+++ b/modules/editor/skins/TOAST UI Editor/css/tui-file-uploader.css
@@ -10,3 +10,12 @@
     width: 100%;
     
 }
+
+.tui-clearfix {
+    margin-top: 5px;
+}
+
+.tui-clearfix::after { 
+    content: '';
+    display: inline-block;
+    clear: both }
