--- a/modules/wiki/skins/LIFO_wiki/css/wiki.css
+++ b/modules/wiki/skins/LIFO_wiki/css/wiki.css
@@ -22,6 +22,13 @@ p {
     width: 1px;
 }
 
+html, body {
+    min-height: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    position: relative;
+}
 /* Wiki Reset */
 
 .wiki img{border:0}
@@ -164,23 +171,16 @@ p {
 .time *{color:#666}
 .time dt{background:#fff}
 /* Attached File */
-.attachedFile{position:relative;margin:1em 0 1em 0;float:left;width:100%}
-.attachedFile *{margin:0;padding:0;font-size:11px;vertical-align:middle}
-.attachedFile dt img{margin-right:10px}
-.attachedFile dt .fileToggle{border:0;padding:0;overflow:visible;cursor:pointer;font-size:11px;background:none}
-.attachedFile dd{position:relative;margin-right:5px;display:none;margin-top:5px;padding-left:40px}
-.attachedFile.open dd{display:block}
-.attachedFile ul.files{position:relative;margin:0 0 1em 0;padding:0;clear:both;list-style:none}
-.attachedFile ul.files *{display:inline-block;*display:inline;padding:0;margin:0;font-size:11px}
-.attachedFile ul.files li{position:relative;margin:0 10px 0 0}
-.attachedFile ul.files a{position:relative;background-repeat:no-repeat;background-position:left center;*zoom:1;text-decoration:none !important}
-.attachedFile ul.files a .bubble{display:none;position:absolute;top:-20px;left:0;padding:2px 5px;z-index:100;white-space:nowrap}
-.attachedFile ul.files a:hover .bubble,
-.attachedFile ul.files a:active .bubble,
-.attachedFile ul.files a:focus .bubble{display:block}
-.attachedFile ul.files a{padding-left:15px;background-image:url(../img/iconFile.gif);color:#4d4d4d}
-.attachedFile dt a{color:#4d4d4d}
-.attachedFile ul.files a .bubble{border:1px solid #ddd;background-color:#fff;color:#4d4d4d}
+.attachedFile *{vertical-align:middle}
+.attachedFile dt .fileToggle{border:0;padding:0;overflow:visible;cursor:pointer;background:none}
+
+.attachedFile.open dd{display:none;}
+.attachedFile.open .xi-angle-down{display:none;}
+.attachedFile .xi-angle-right{display:none;}
+.attachedFile.open .xi-angle-right{display:inline-block;}
+
+
+.attachedFile ul.files a{position:relative;background-repeat:no-repeat;background-position:left center;}
 /* Wiki Write */
 
 /* Editor */
