Update LIFO wiki + delete google-code-prettify + add user tab + add scroll tab + move history feature in wiki module

--- a/modules/wiki/skins/LIFO_wiki/css/wiki.css
+++ b/modules/wiki/skins/LIFO_wiki/css/wiki.css
@@ -220,3 +220,15 @@ html, body {
 #wikiToc ul{padding:0 20px}
 span.edit_link{ float:right;font-size:12px;font-weight:normal;line-height:1.5em}
 /* Button */
+
+
+.nav-control {
+    position: fixed;
+    margin: 0;
+    padding: 0;
+    right: 0;
+    bottom: 0;
+    list-style-type: none;
+    opacity: .8;
+    z-index: 90005
+}
