--- a/modules/wiki/skins/LIFO_wiki/css/wiki.css
+++ b/modules/wiki/skins/LIFO_wiki/css/wiki.css
@@ -227,7 +227,7 @@ span.edit_link{ float:right;font-size:12px;font-weight:normal;line-height:1.5em}
     margin: 0;
     padding: 0;
     right: 0;
-    bottom: 0;
+    bottom: 57px;
     list-style-type: none;
     opacity: .8;
     z-index: 90005
