hotfix skin lib path

--- a/layouts/LIFO_LAYOUT_EDITION/layout.html
+++ b/layouts/LIFO_LAYOUT_EDITION/layout.html
@@ -5,11 +5,11 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<!--%import("modules/bootstrap-4.2.1-dist/css/bootstrap.css")-->
+<!--%import("libs/bootstrap-4.2.1-dist/css/bootstrap.css")-->
 
 
-<!--%import("modules/popper-1.14.5.min/popper-1.14.5.min.js")-->
-<!--%import("modules/bootstrap-4.1.3-dist/js/bootstrap.js")-->
+<!--%import("libs/popper-1.14.5.min/popper-1.14.5.min.js")-->
+<!--%import("libs/bootstrap-4.1.3-dist/js/bootstrap.js")-->
 
 <!--%import("js/banner.js")-->
 
